2010-03-23  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-lookup.c (do_lookup_x): If tab->entries is NULL,
	but tab->size != 0, just unlock and goto success, without
	allocating anything or entering anything into the hash table.
	(_dl_debug_bindings): Temporarily set tab->entries to NULL
	around do_lookup_x in undef_map->l_local_scope[0].  If
	undef_map->l_symbolic_in_local_scope, lookup also in
	symbolic_searchlist of following libraries in l_local_scope
	that have DT_SYMBOLIC set.
	* elf/dl-deps.c (_dl_map_object_deps): Compute
	l_symbolic_in_local_scope.
	* include/link.h (struct link_map): Add l_symbolic_in_local_scope
	bitfield.

2010-03-24  Ulrich Drepper  <drepper@redhat.com>

	[BZ #11410]
	* wctype/wctype.h: Use <wchar.h> to get the wint_t definition.

	* wcsmbs/wchar.h: Correct preprocessor directive indentation.  Move
	C++ prototype handling to a better place.

2010-03-18  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (open_verify): Extend expected to the full size of the
	e_ident array.  When loading, check that the fields in e_ident we don't
	know are zero to allow future extensions.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/i686/multiarch/memcmp-ssse3.S: Update %xmm3
	when exit from loop.

2010-03-16  Andreas Schwab  <schwab@redhat.com>

	* resolv/res_send.c (__libc_res_nsend): Fix printing of server
	address in debug statement.
	(send_dg): Pass correct buffer pointer to DprintQ.

2010-03-17  Ulrich Drepper  <drepper@redhat.com>

	* libc-abis: Add a few more entries.

2010-03-16  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (VALID_ELF_ABIVERSION): Add additional osabi parameter.
	Not used here.
	(open_verify): Modify for extended VALID_ELF_ABIVERSION macro
	interface.
	* sysdeps/unix/sysv/linux/ldsodefs.h (VALID_ELF_ABIVERSION): Add
	additional osabi parameter.  Only acceept nonzero ABI versions if osabi
	is Linux.
	Fix includes.
	(expected2): Don't explicitly initialize EI_ABIVERSION byte.
